Remove node_modules from repo

--- a/public/Devis-gratuit.html
+++ b/public/Devis-gratuit.html
@@ -157,7 +157,7 @@
 
     <section>
         <label>Nom et Prénom</label>
-        <label for="clientName"></label><input type="text" id="clientName" placeholder="Ex: Yoan DIOKOUANDI" />
+        <label for="clientName"></label><input type="text" id="clientName" placeholder="Ex: Albert Lamairde" />
 
         <label>Pays</label>
         <label for="pays"></label><select id="pays">
